--- a/theme/local.css
+++ b/theme/local.css
@@ -21,7 +21,7 @@
 
 .navbar .nav > li > a { color: #49AFCD; }
 .navbar .divider-vertical { border-right: 1px solid #4D4D4D; }
-.navbar { margin-bottom: 4em; } 
+.navbar { margin-bottom: 4em; }
 
 
 /* Styling for elements */
@@ -34,7 +34,7 @@ h3 { margin-top: 2.5em; }
 /* Styling for articles */
 .article { padding-bottom:20px; padding-right: 40px; }
 .content-title { margin-bottom: 30px; }
-.article a:hover { text-decoration: none; } 
+.article a:hover { text-decoration: none; }
 
 
 
@@ -75,3 +75,4 @@ h3 { margin-top: 2.5em; }
 .social a[href*='stackoverflow.com']:before {content: url('./images/icons/stackoverflow.png'); margin-right: 2px; vertical-align: -3px;}
 .social a[href*='twitter.com']:before {content: url('./images/icons/twitter.png'); margin-right: 2px; vertical-align: -3px;}
 .social a[href*='weibo.com']:before {content: url('./images/icons/weibo.png'); margin-right: 2px; vertical-align: -3px;}
+.social a[href*='lofter.com']:before {content: url('./images/icons/lofter.png'); margin-right: 2px; vertical-align: -3px;}
